--- a/java/pom.xml
+++ b/java/pom.xml
@@ -95,6 +95,11 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>gov.nasa.gsfc.heasarc</groupId>
+            <artifactId>nom-tam-fits</artifactId>
+            <version>1.15.2</version>
+        </dependency>
     </dependencies>
 
 </project>
