--- a/java/pom.xml
+++ b/java/pom.xml
@@ -100,6 +100,12 @@
             <artifactId>nom-tam-fits</artifactId>
             <version>1.15.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.wendykierp</groupId>
+            <artifactId>JTransforms</artifactId>
+            <version>3.1</version>
+            <classifier>with-dependencies</classifier>
+        </dependency>
     </dependencies>
 
 </project>
