Stringify TOML values in book.toml

--- a/book/book.toml
+++ b/book/book.toml
@@ -1,6 +1,6 @@
-title = Finding the Planets
-author = Daan van Berkel
-description = A book accompanying a workshop to find the planets around Trappist-1.
+title = "Finding the Planets"
+author = "Daan van Berkel"
+description = "A book accompanying a workshop to find the planets around Trappist-1."
 
 [output.html]
 mathjax-support = true
