Move image directory into src directory
This way the images get copied to the destination directory

--- a/book/Makefile
+++ b/book/Makefile
@@ -1,4 +1,4 @@
-IMAGE_DIRECTORY = image
+IMAGE_DIRECTORY = src/image
 PSS  = $(wildcard $(IMAGE_DIRECTORY)/*.ps)
 PNGS = $(patsubst $(IMAGE_DIRECTORY)/%.ps,$(IMAGE_DIRECTORY)/%.png, $(PSS))
 
