--- a/book/book.toml
+++ b/book/book.toml
@@ -3,4 +3,5 @@ author = "Daan van Berkel"
 description = "A book accompanying a workshop to find the planets around Trappist-1."
 
 [output.html]
+destination = "../docs/"
 mathjax-support = true
