--- a/book/book.toml
+++ b/book/book.toml
@@ -1,7 +1,10 @@
+[book]
 title = "Finding the Planets"
 author = "Daan van Berkel"
 description = "A book accompanying a workshop to find the planets around Trappist-1."
 
+[build]
+build-dir = "../docs/"
+
 [output.html]
-destination = "../docs/"
 mathjax-support = true
