--- a/book/book.toml
+++ b/book/book.toml
@@ -2,6 +2,7 @@
 title = "Finding the Planets"
 author = "Daan van Berkel"
 description = "A book accompanying a workshop to find the planets around Trappist-1."
+src = "src"
 
 [build]
 build-dir = "../docs/"
